BUGFIX spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,3 +46,7 @@ body {
   font-size: 45px;
   background-color:rgb(252, 148, 57)
 }
+
+.centered-image{
+  text-align: center;
+}
